add `read_narration` setting, and ensure proper boolean/null serialization in character files.

--- a/web/index.html
+++ b/web/index.html
@@ -77,6 +77,10 @@
                     <label>TTS URL</label>
                     <input type="text" id="tts-url">
                 </div>
+                <div class="form-group checkbox-group">
+                    <input type="checkbox" id="read-narration">
+                    <label for="read-narration">Read Narration (TTS)</label>
+                </div>
                 <div class="modal-actions">
                     <button id="save-settings-btn">Save</button>
                     <button id="close-settings-btn">Close</button>
