--- a/web/index.html
+++ b/web/index.html
@@ -81,6 +81,10 @@
                     <input type="checkbox" id="read-narration">
                     <label for="read-narration">Read Narration (TTS)</label>
                 </div>
+                <div class="form-group checkbox-group">
+                    <input type="checkbox" id="pov-mode">
+                    <label for="pov-mode">POV Image Mode</label>
+                </div>
                 <div class="modal-actions">
                     <button id="save-settings-btn">Save</button>
                     <button id="close-settings-btn">Close</button>
