--- a/web/index.html
+++ b/web/index.html
@@ -41,7 +41,7 @@
                     <button id="send-btn">Send</button>
                 </div>
                 <div class="action-buttons">
-                    <button id="gen-image-btn" class="action-btn">📸 Selfie</button>
+                    <button id="gen-image-btn" class="action-btn">📸 Image</button>
                     <button id="gen-video-btn" class="action-btn">🎥 Video</button>
                 </div>
             </div>
@@ -84,6 +84,10 @@
                 <div class="form-group checkbox-group">
                     <input type="checkbox" id="pov-mode">
                     <label for="pov-mode">POV Image Mode</label>
+                </div>
+                <div class="form-group checkbox-group">
+                    <input type="checkbox" id="first-person-mode">
+                    <label for="first-person-mode">First-Person Mode (No Face Swap)</label>
                 </div>
                 <div class="modal-actions">
                     <button id="save-settings-btn">Save</button>
