launcher UI match

--- a/web/index.html
+++ b/web/index.html
@@ -18,7 +18,7 @@
         <div class="container">
             <!-- Header -->
             <header>
-                <div class="logo">Discord Dreams</div>
+                <img src="logo.png" alt="Logo" class="logo-img">
                 <div class="controls">
                     <button id="settings-btn" class="icon-btn">⚙️</button>
                 </div>
