implemented z-image, working in all modes

--- a/web/index.html
+++ b/web/index.html
@@ -89,6 +89,13 @@
                     <input type="checkbox" id="first-person-mode">
                     <label for="first-person-mode">First-Person Mode (No Face Swap)</label>
                 </div>
+                <div class="form-group">
+                    <label for="sd-mode">Stable Diffusion Mode</label>
+                    <select id="sd-mode">
+                        <option value="xl">XL (Fast)</option>
+                        <option value="lumina">Z-Image (High Quality)</option>
+                    </select>
+                </div>
                 <div class="modal-actions">
                     <button id="save-settings-btn">Save</button>
                     <button id="close-settings-btn">Close</button>
