added wavespeed API and video models as options.

--- a/web/index.html
+++ b/web/index.html
@@ -42,7 +42,13 @@
                 </div>
                 <div class="action-buttons">
                     <button id="gen-image-btn" class="action-btn">📸 Image</button>
-                    <button id="gen-video-btn" class="action-btn">🎥 Video</button>
+                    <select id="video-model-select" class="video-select">
+                        <option value="wan">WAN S2V</option>
+                        <option value="infinitetalk">InfiniteTalk</option>
+                        <option value="infinitetalk-fast">InfiniteTalk Fast</option>
+                        <option value="hunyuan-avatar">Hunyuan Avatar</option>
+                    </select>
+                    <button id="gen-video-btn" class="action-btn">🎥 Generate</button>
                 </div>
             </div>
         </div>
