feat: Add Chub.ai character importer and Wavespeed video models Chub Importer: - Import Chub.ai JSON character cards from launcher - LLM auto-generates image prompts from character descriptions - LLM generates scenarios if card doesn't have them - Generate reference portrait for face swap (XL mode) - Delete imported characters from launcher - Launcher starts maximized - Server loads imported characters on startup Video: - Added Wavespeed video model options (InfiniteTalk, Hunyuan Avatar) - Updated web UI with video model dropdown Other: - Fixed default OpenRouter model - Updated README with Chub import docs - Added Wavespeed API key to .env.example New files: chub_importer.py

--- a/web/index.html
+++ b/web/index.html
@@ -20,6 +20,7 @@
             <header>
                 <img src="logo.png" alt="Logo" class="logo-img">
                 <div class="controls">
+                    <button id="export-btn" class="icon-btn" title="Export Gallery">📥</button>
                     <button id="settings-btn" class="icon-btn">⚙️</button>
                 </div>
             </header>
@@ -42,6 +43,7 @@
                 </div>
                 <div class="action-buttons">
                     <button id="gen-image-btn" class="action-btn">📸 Image</button>
+                    <button id="gen-image-direct-btn" class="action-btn">🎯 Direct</button>
                     <select id="video-model-select" class="video-select">
                         <option value="wan">WAN S2V</option>
                         <option value="infinitetalk">InfiniteTalk</option>
