--- a/web/index.html
+++ b/web/index.html
@@ -122,14 +122,14 @@
                     </select>
                 </div>
                 <div class="form-group">
-                    <label for="lora-preset-select">LoRA Preset</label>
+                    <label for="lora-preset-select">LoRA 1 Preset</label>
                     <select id="lora-preset-select">
                         <!-- Options populated dynamically from lora_presets.json -->
                         <option value="custom">Loading...</option>
                     </select>
                 </div>
                 <div class="form-group" id="custom-url-group" style="display:none;">
-                    <label for="lora-url">Custom LoRA URL</label>
+                    <label for="lora-url">Custom LoRA 1 URL</label>
                     <input type="text" id="lora-url" placeholder="HuggingFace or CivitAI URL...">
                 </div>
                 <div class="form-group">
@@ -137,8 +137,23 @@
                     <textarea id="lora-prompt" placeholder="Describe the video motion/action..."></textarea>
                 </div>
                 <div class="form-group">
-                    <label for="lora-scale">LoRA Scale</label>
+                    <label for="lora-scale">LoRA 1 Scale</label>
                     <input type="number" id="lora-scale" value="1" min="0" max="2" step="0.1">
+                </div>
+                <div class="form-group">
+                    <label for="lora-preset-select-2">LoRA 2 Preset (optional)</label>
+                    <select id="lora-preset-select-2">
+                        <!-- Options populated dynamically from lora_presets.json -->
+                        <option value="none">None</option>
+                    </select>
+                </div>
+                <div class="form-group" id="custom-url-group-2" style="display:none;">
+                    <label for="lora-url-2">Custom LoRA 2 URL</label>
+                    <input type="text" id="lora-url-2" placeholder="HuggingFace or CivitAI URL...">
+                </div>
+                <div class="form-group" id="lora-scale-2-group" style="display:none;">
+                    <label for="lora-scale-2">LoRA 2 Scale</label>
+                    <input type="number" id="lora-scale-2" value="1" min="0" max="2" step="0.1">
                 </div>
                 <div class="form-group">
                     <label for="lora-frames">Frames (81-121)</label>
