--- a/web/index.html
+++ b/web/index.html
@@ -121,13 +121,39 @@
                         <option value="wan-2.1-lora">WAN 2.1 (CivitAI)</option>
                     </select>
                 </div>
+
+                <!-- LoRA Selection with Categories -->
                 <div class="form-group">
-                    <label for="lora-preset-select">LoRA 1 Preset</label>
-                    <select id="lora-preset-select">
-                        <!-- Options populated dynamically from lora_presets.json -->
-                        <option value="custom">Loading...</option>
-                    </select>
+                    <label>⭐ Favorites</label>
+                    <div id="lora-favorites" class="lora-grid"
+                        style="display: flex; flex-wrap: wrap; gap: 6px; min-height: 30px; padding: 8px; background: rgba(255,255,255,0.05); border-radius: 6px; margin-bottom: 10px;">
+                        <!-- Populated by JS -->
+                    </div>
                 </div>
+
+                <div class="form-group">
+                    <label>Category</label>
+                    <div id="lora-categories" style="display: flex; flex-wrap: wrap; gap: 6px; margin-bottom: 10px;">
+                        <button type="button" class="lora-cat-btn active" data-cat="all">All</button>
+                        <button type="button" class="lora-cat-btn" data-cat="expressions">Expr</button>
+                        <button type="button" class="lora-cat-btn" data-cat="dance">Dance</button>
+                        <button type="button" class="lora-cat-btn" data-cat="foreplay">Foreplay</button>
+                        <button type="button" class="lora-cat-btn" data-cat="oral">Oral</button>
+                        <button type="button" class="lora-cat-btn" data-cat="positions">Positions</button>
+                        <button type="button" class="lora-cat-btn" data-cat="climax">Climax</button>
+                        <button type="button" class="lora-cat-btn" data-cat="effects">Effects</button>
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label>LoRA 1 <span id="selected-lora-name" style="color: #0ea5e9;"></span></label>
+                    <div id="lora-grid" class="lora-grid"
+                        style="display: flex; flex-wrap: wrap; gap: 6px; max-height: 150px; overflow-y: auto; padding: 8px; background: rgba(255,255,255,0.05); border-radius: 6px;">
+                        <!-- Populated by JS -->
+                    </div>
+                    <input type="hidden" id="lora-preset-select" value="">
+                </div>
+
                 <div class="form-group" id="custom-url-group" style="display:none;">
                     <label for="lora-url">Custom LoRA 1 URL</label>
                     <input type="text" id="lora-url" placeholder="HuggingFace or CivitAI URL...">
@@ -140,10 +166,11 @@
                     <label for="lora-scale">LoRA 1 Scale</label>
                     <input type="number" id="lora-scale" value="1" min="0" max="2" step="0.1">
                 </div>
+
+                <!-- LoRA 2 (simplified - just dropdown for now) -->
                 <div class="form-group">
-                    <label for="lora-preset-select-2">LoRA 2 Preset (optional)</label>
+                    <label for="lora-preset-select-2">LoRA 2 (optional)</label>
                     <select id="lora-preset-select-2">
-                        <!-- Options populated dynamically from lora_presets.json -->
                         <option value="none">None</option>
                     </select>
                 </div>
