--- a/web/index.html
+++ b/web/index.html
@@ -66,6 +66,14 @@
                         <option value="z-image-turbo" selected>Z-Image Turbo</option>
                         <option value="xl-lustify">XL Lustify</option>
                         <option value="xl-epicrealism">XL EpicRealism</option>
+                        <option value="biglove-insta">BigLove Insta</option>
+                        <option value="mohawk-v20">MOHAWK v20</option>
+                        <option value="colossus-xl">Colossus XL</option>
+                        <option value="juggernaut-xl">Juggernaut XL</option>
+                        <option value="pikon-realism">Pikon Realism</option>
+                        <option value="realistic-stock">Realistic Stock</option>
+                        <option value="unstable-illusion">Unstable Illusion</option>
+                        <option value="unstable-illusion-v2">Unstable Illusion V2</option>
                     </select>
                     <select id="video-model-select" class="video-select">
                         <option value="wan">WAN S2V</option>
