feat: Add Qwen image generation and editing features - Add Qwen Image 2512 as cloud image generation option in model dropdown - Add image editing with Qwen Image Edit 2511 (✏️ Edit button on images) - Add per-image faceswap button (🔄 Face) using existing ReActor logic - Apply automatic faceswap after Qwen image generation (matches local SD behavior) - Fix Replicate FileOutput object handling for Qwen models Files modified: - replicate_manager.py: generate_qwen_image(), edit_image() methods - server.py: /api/edit/image, /api/faceswap endpoints, Qwen routing - web/index.html: Qwen dropdown option, edit modal - web/app.js: addImage() buttons, openEditModal(), applyFaceswap() - web/style.css: image action button styles - README.md: Updated features documentation

--- a/web/index.html
+++ b/web/index.html
@@ -74,6 +74,7 @@
                         <option value="realistic-stock">Realistic Stock</option>
                         <option value="unstable-illusion">Unstable Illusion</option>
                         <option value="unstable-illusion-v2">Unstable Illusion V2</option>
+                        <option value="qwen-image-2512">☁️ Qwen 2512 (Cloud)</option>
                     </select>
                     <select id="video-model-select" class="video-select">
                         <option value="wan">WAN S2V</option>
@@ -320,6 +321,26 @@
                 <div class="modal-actions">
                     <button id="generate-script-tts-btn">🔊 Generate</button>
                     <button id="close-script-tts-btn">Close</button>
+                </div>
+            </div>
+        </div>
+
+        <!-- Image Edit Modal -->
+        <div id="image-edit-modal" class="modal hidden">
+            <div class="modal-content">
+                <h2>✏️ Edit Image</h2>
+                <div class="form-group">
+                    <img id="edit-preview-image"
+                        style="max-width: 100%; max-height: 200px; border-radius: 8px; margin-bottom: 15px;">
+                </div>
+                <div class="form-group">
+                    <label for="edit-prompt-input">Edit instruction:</label>
+                    <textarea id="edit-prompt-input" rows="3"
+                        placeholder="e.g., 'make her shirt red' or 'add sunset lighting'..."></textarea>
+                </div>
+                <div class="modal-actions">
+                    <button id="submit-edit-btn">✨ Apply Edit</button>
+                    <button id="close-edit-btn">Cancel</button>
                 </div>
             </div>
         </div>
