feat: Dynamic SD model discovery from checkpoints folder
- Add /api/image-models endpoint that scans SD_CHECKPOINTS_FOLDER
- Support both .safetensors and .gguf model files
- Auto-detect Lumina mode from z-image/zImage/z_image prefixes
- Remove hardcoded MODEL_VALUE_MAP from generate_image endpoints
- Populate image model dropdown dynamically on page load

Also:
- Add Qwen cloud routing to /api/generate/image/direct endpoint
- Add generate_image_direct_qwen() helper for direct prompt + Qwen cloud
- Update image_manager to use passed checkpoint for Lumina mode
- Add SD_CHECKPOINTS_FOLDER config (default: C:/AI/ForgeUI/models/Stable-diffusion)

Files modified:
- config.py: Added SD_CHECKPOINTS_FOLDER
- server.py: New /api/image-models, updated generate_image/direct endpoints
- image_manager.py: Lumina mode now uses passed checkpoint
- web/index.html: Removed hardcoded dropdown options
- web/app.js: Added loadImageModels() called on init

--- a/web/index.html
+++ b/web/index.html
@@ -63,18 +63,7 @@
                     <button id="gen-image-btn" class="action-btn">📸 Image</button>
                     <button id="gen-image-direct-btn" class="action-btn">🎯 Direct</button>
                     <select id="image-model-select" class="model-select">
-                        <option value="z-image-turbo" selected>Z-Image Turbo</option>
-                        <option value="xl-lustify">XL Lustify</option>
-                        <option value="xl-epicrealism">XL EpicRealism</option>
-                        <option value="biglove-insta">BigLove Insta</option>
-                        <option value="mohawk-v20">MOHAWK v20</option>
-                        <option value="colossus-xl">Colossus XL</option>
-                        <option value="juggernaut-xl">Juggernaut XL</option>
-                        <option value="pikon-realism">Pikon Realism</option>
-                        <option value="realistic-stock">Realistic Stock</option>
-                        <option value="unstable-illusion">Unstable Illusion</option>
-                        <option value="unstable-illusion-v2">Unstable Illusion V2</option>
-                        <option value="qwen-image-2512">☁️ Qwen 2512 (Cloud)</option>
+                        <option value="">Loading models...</option>
                     </select>
                     <select id="video-model-select" class="video-select">
                         <option value="wan">WAN S2V</option>
